course_project/tinybasicParser.py
# Generated from tinybasic.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class tinybasicParser ( Parser ):

    grammarFileName = "tinybasic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'# print'", "'IF'", "'THEN'", "'GOTO'", 
                     "'INPUT'", "'LET'", "'='", "'GOSUB'", "'RETURN'", "'CLEAR'", 
                     "'LIST'", "'RUN'", "'END'", "','", "'+'", "'-'", "'*'", 
                     "'/'", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "STRING", "DIGIT", "VAR", "CR", "WS" ]

    RULE_program = 0
    RULE_line = 1
    RULE_statement = 2
    RULE_exprlist = 3
    RULE_varlist = 4
    RULE_expression = 5
    RULE_term = 6
    RULE_factor = 7
    RULE_vara = 8
    RULE_number = 9
    RULE_relop = 10

    ruleNames =  [ "program", "line", "statement", "exprlist", "varlist", 
                   "expression", "term", "factor", "vara", "number", "relop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    STRING=21
    DIGIT=22
    VAR=23
    CR=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinybasicParser.LineContext)
            else:
                return self.getTypedRuleContext(tinybasicParser.LineContext,i)


        def getRuleIndex(self):
            return tinybasicParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = tinybasicParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tinybasicParser.T__0) | (1 << tinybasicParser.T__1) | (1 << tinybasicParser.T__3) | (1 << tinybasicParser.T__4) | (1 << tinybasicParser.T__5) | (1 << tinybasicParser.T__7) | (1 << tinybasicParser.T__8) | (1 << tinybasicParser.T__9) | (1 << tinybasicParser.T__10) | (1 << tinybasicParser.T__11) | (1 << tinybasicParser.T__12) | (1 << tinybasicParser.STRING) | (1 << tinybasicParser.DIGIT) | (1 << tinybasicParser.VAR))) != 0):
                self.state = 22
                self.line()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(tinybasicParser.NumberContext,0)


        def statement(self):
            return self.getTypedRuleContext(tinybasicParser.StatementContext,0)


        def CR(self):
            return self.getToken(tinybasicParser.CR, 0)

        def getRuleIndex(self):
            return tinybasicParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            # (3) на вход вся строка без пробелов
            # # print(self.getText())
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = tinybasicParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tinybasicParser.DIGIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.number()
                self.state = 29
                self.statement()
                self.state = 30
                self.match(tinybasicParser.CR)
                pass
            elif token in [tinybasicParser.T__0, tinybasicParser.T__1, tinybasicParser.T__3, tinybasicParser.T__4, tinybasicParser.T__5, tinybasicParser.T__7, tinybasicParser.T__8, tinybasicParser.T__9, tinybasicParser.T__10, tinybasicParser.T__11, tinybasicParser.T__12, tinybasicParser.STRING, tinybasicParser.VAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.statement()
                self.state = 33
                self.match(tinybasicParser.CR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprlist(self):
            return self.getTypedRuleContext(tinybasicParser.ExprlistContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinybasicParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(tinybasicParser.ExpressionContext,i)


        def relop(self):
            return self.getTypedRuleContext(tinybasicParser.RelopContext,0)


        def statement(self):
            return self.getTypedRuleContext(tinybasicParser.StatementContext,0)


        def number(self):
            return self.getTypedRuleContext(tinybasicParser.NumberContext,0)


        def varlist(self):
            return self.getTypedRuleContext(tinybasicParser.VarlistContext,0)


        def vara(self):
            return self.getTypedRuleContext(tinybasicParser.VaraContext,0)


        def getRuleIndex(self):
            return tinybasicParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            # print(self.getText())
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = tinybasicParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tinybasicParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(tinybasicParser.T__0)
                self.state = 38
                self.exprlist()
                pass
            elif token in [tinybasicParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.match(tinybasicParser.T__1)
                self.state = 40
                self.expression()
                self.state = 41
                self.relop()
                self.state = 42
                self.expression()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==tinybasicParser.T__2:
                    self.state = 43
                    self.match(tinybasicParser.T__2)


                self.state = 46
                self.statement()
                pass
            elif token in [tinybasicParser.T__3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.match(tinybasicParser.T__3)
                self.state = 49
                self.number()
                pass
            elif token in [tinybasicParser.T__4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.match(tinybasicParser.T__4)
                self.state = 51
                self.varlist()
                pass
            elif token in [tinybasicParser.T__5, tinybasicParser.STRING, tinybasicParser.VAR]:
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==tinybasicParser.T__5:
                    self.state = 52
                    self.match(tinybasicParser.T__5)


                self.state = 55
                self.vara()
                self.state = 56
                self.match(tinybasicParser.T__6)
                self.state = 57
                self.expression()
                pass
            elif token in [tinybasicParser.T__7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 59
                self.match(tinybasicParser.T__7)
                self.state = 60
                self.expression()
                pass
            elif token in [tinybasicParser.T__8]:
                self.enterOuterAlt(localctx, 7)
                self.state = 61
                self.match(tinybasicParser.T__8)
                pass
            elif token in [tinybasicParser.T__9]:
                self.enterOuterAlt(localctx, 8)
                self.state = 62
                self.match(tinybasicParser.T__9)
                pass
            elif token in [tinybasicParser.T__10]:
                self.enterOuterAlt(localctx, 9)
                self.state = 63
                self.match(tinybasicParser.T__10)
                pass
            elif token in [tinybasicParser.T__11]:
                self.enterOuterAlt(localctx, 10)
                self.state = 64
                self.match(tinybasicParser.T__11)
                pass
            elif token in [tinybasicParser.T__12]:
                self.enterOuterAlt(localctx, 11)
                self.state = 65
                self.match(tinybasicParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(tinybasicParser.STRING)
            else:
                return self.getToken(tinybasicParser.STRING, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinybasicParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(tinybasicParser.ExpressionContext,i)


        def getRuleIndex(self):
            return tinybasicParser.RULE_exprlist

        def enterRule(self, listener:ParseTreeListener):
            # print(self.getText())
            if hasattr( listener, "enterExprlist" ):
                listener.enterExprlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprlist" ):
                listener.exitExprlist(self)




    def exprlist(self):

        localctx = tinybasicParser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exprlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 68
                self.match(tinybasicParser.STRING)
                pass

            elif la_ == 2:
                self.state = 69
                self.expression()
                pass


            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tinybasicParser.T__13:
                self.state = 72
                self.match(tinybasicParser.T__13)
                self.state = 75
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 73
                    self.match(tinybasicParser.STRING)
                    pass

                elif la_ == 2:
                    self.state = 74
                    self.expression()
                    pass


                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vara(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinybasicParser.VaraContext)
            else:
                return self.getTypedRuleContext(tinybasicParser.VaraContext,i)


        def getRuleIndex(self):
            return tinybasicParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            # print(self.getText())
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)




    def varlist(self):

        localctx = tinybasicParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.vara()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tinybasicParser.T__13:
                self.state = 83
                self.match(tinybasicParser.T__13)
                self.state = 84
                self.vara()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinybasicParser.TermContext)
            else:
                return self.getTypedRuleContext(tinybasicParser.TermContext,i)


        def getRuleIndex(self):
            return tinybasicParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            # print(self.getText())
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = tinybasicParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tinybasicParser.T__14 or _la==tinybasicParser.T__15:
                self.state = 90
                _la = self._input.LA(1)
                if not(_la==tinybasicParser.T__14 or _la==tinybasicParser.T__15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 93
            self.term()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tinybasicParser.T__14 or _la==tinybasicParser.T__15:
                self.state = 94
                _la = self._input.LA(1)
                if not(_la==tinybasicParser.T__14 or _la==tinybasicParser.T__15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 95
                self.term()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinybasicParser.FactorContext)
            else:
                return self.getTypedRuleContext(tinybasicParser.FactorContext,i)


        def getRuleIndex(self):
            return tinybasicParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            # print(self.getText())
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = tinybasicParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.factor()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tinybasicParser.T__16 or _la==tinybasicParser.T__17:
                self.state = 102
                _la = self._input.LA(1)
                if not(_la==tinybasicParser.T__16 or _la==tinybasicParser.T__17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 103
                self.factor()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vara(self):
            return self.getTypedRuleContext(tinybasicParser.VaraContext,0)


        def number(self):
            return self.getTypedRuleContext(tinybasicParser.NumberContext,0)


        def getRuleIndex(self):
            return tinybasicParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            # print(self.getText())
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = tinybasicParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_factor)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tinybasicParser.STRING, tinybasicParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.vara()
                pass
            elif token in [tinybasicParser.DIGIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.number()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VaraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(tinybasicParser.VAR, 0)

        def STRING(self):
            return self.getToken(tinybasicParser.STRING, 0)

        def getRuleIndex(self):
            return tinybasicParser.RULE_vara

        def enterRule(self, listener:ParseTreeListener):
            # print(self.getText())
            if hasattr( listener, "enterVara" ):
                listener.enterVara(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVara" ):
                listener.exitVara(self)




    def vara(self):

        localctx = tinybasicParser.VaraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vara)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not(_la==tinybasicParser.STRING or _la==tinybasicParser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(tinybasicParser.DIGIT)
            else:
                return self.getToken(tinybasicParser.DIGIT, i)

        def getRuleIndex(self):
            return tinybasicParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            # на вход число
            # print(self.getText())
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):

        localctx = tinybasicParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.match(tinybasicParser.DIGIT)
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==tinybasicParser.DIGIT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tinybasicParser.RULE_relop

        def enterRule(self, listener:ParseTreeListener):
            # print(self.getText())
            if hasattr( listener, "enterRelop" ):
                listener.enterRelop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelop" ):
                listener.exitRelop(self)




    def relop(self):

        localctx = tinybasicParser.RelopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_relop)
        self._la = 0 # Token type
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tinybasicParser.T__18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(tinybasicParser.T__18)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==tinybasicParser.T__6 or _la==tinybasicParser.T__19:
                    self.state = 121
                    _la = self._input.LA(1)
                    if not(_la==tinybasicParser.T__6 or _la==tinybasicParser.T__19):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                pass
            elif token in [tinybasicParser.T__19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(tinybasicParser.T__19)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==tinybasicParser.T__6 or _la==tinybasicParser.T__18:
                    self.state = 125
                    _la = self._input.LA(1)
                    if not(_la==tinybasicParser.T__6 or _la==tinybasicParser.T__18):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                pass
            elif token in [tinybasicParser.T__6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.match(tinybasicParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





